Bug 892607 - Start pivot searches from outside the ignored subtree. r=surkov